# cancer_genes

./: README.md  docker-compose.yml  main.py  pyproject.toml
Data/: config.json  study_ids.txt
modules/: classification.py  data_extration.py  dbscan.py  dim_red.py  k_means.py  proc_data.py  val_csv.py
